--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -174,8 +174,13 @@ AAIA Fellow</span></u></b></font></p>
 <font size="4">-- <b><u><span style="font-family: Times New Roman">Co-Program 
 chair of ACM International Conference on Multimodal Interaction 2021 (ICMI).</span></u></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
-<font size="4">-- <b><u><span style="font-family: Times New Roman">Special 
-Sessions/Panels Chairs for FG 2023</span></u></b></font></p>
+<font size="4"><span lang="en-us">--</span> <b><u>
+<span style="font-family: Times New Roman">Tutorial Chair for ICPR 2024 
+(Kolkata, India).</span></u></b></font></p>
+<p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
+<font size="4"><span lang="en-us">--</span> <b><u>
+<span style="font-family: Times New Roman">Special Sessions/Panels Chairs for FG 
+2023 (Hawaii, USA).</span></u></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4"><b><span style="font-family: Times New Roman">-- <u>General Chair 
 for Arctic AI days 2022</u></span></b></font></p>
@@ -309,9 +314,12 @@ Nixon) Special issue on New Advances in Video-based Gait Analysis and
 Applications: Challenges and Solutions,<b> </b>IEEE Transactions on Systems, 
 Man, and Cybernetics - Part B: Cybernetics, 2009-2010. </font> </span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; text-indent:-21.0pt">
-<font size="4">--&nbsp;<span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:700; text-decoration:underline">Co-chair of 15 international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: </span>
-<span style="line-height: 125%">IEEE BigMM Grand Challenge 2020 on Touchless 
-Technologies; ''C</span></font><font size="4" face="Times New Roman">VPM 2020: 
+<font size="4">--&nbsp;<span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:700; text-decoration:underline">Co-chair of 1<span lang="en-us">8</span> international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: </span>
+<span style="line-height: 125%">2nd Workshop on ¡°What¡¯s Next in Affect Modelling?¡± 
+with ACII 2022; ¡°The 2nd Challenge Workshop on Remote Physiological Signal 
+Sensing (RePSS)¡± with ICCV 2021; ¡°Multimodal Sentiment Analysis in Real-life 
+Media Challenge and Workshop¡± with ACM Multimedia 2021; IEEE BigMM Grand Challenge 2020 on Touchles</span></font><span style="line-height: 125%"><font size="4">s 
+Technologies; ''C</font></span><font size="4" face="Times New Roman">VPM 2020: 
 International Workshop and Challenge on Computer Vision for Physiological 
 Measurement'' with CVPR 2020; W</font><font size="4"><span lang="EN-US" style="line-height: 125%; ">orkshop on &quot;Automatic Face Analytics for Human Behavior Understanding (FaceHUB 
 2018)&quot; with FG 2018; </span> </font> <font face="Times New Roman">
@@ -373,6 +381,19 @@ Aug. 20-24, 2006, Hongkong.</font></span></p>
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><span style="font-family: 'Times New Roman'; font-weight: 700" lang="en-us"><u><font size="4">Invited talks:</font></u></span></p>
+<p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; line-height:200%; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
+<font size="4">AAIA East China Artificial Intelligence Summit, July 23, 2022.</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
+<font size="4">International Conference on Ubiquitous Positioning, Indoor 
+Navigation and Location-Based Services (IEEE UPINLBS), Mar. 19, 2022;</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
+<font size="4">Vision and Learning Seminar (VALSE), Jan. 19, 2022</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
+<font size="4">¡°Measuring Heart Rate from Videos¡± in Huawei Summit, Nov. 4, 
+2021.</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
+<font size="4">¡°3D Mask Face Anti-Spoofing by Detecting Pulse from Face Videos¡± 
+in ICCV ¡°Face Anti-Spoofing Workshop and Challenge¡±, Oct. 11, 2021 </font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; line-height:200%; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
 <font size="4">Keynote talk ''Emotional Interfaces with Face Analysis'' in ICPR Workshop on ''facial and body expressions, micro-expressions 
 and behavior recognition'', Jan. 10, 2021.</font></p>
