--- a/publications.htm
+++ b/publications.htm
@@ -150,46 +150,46 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <font size="5"><b>2022</b></font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">85</span>. 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">88</span>. 
 Wei Peng, Tuomas Varanka, Abdelrahman Mostafa, Henglin Shi, <b>Guoying Zhao</b>.
 <u>Hyperbolic Deep Neural Networks: A Survey</u>. IEEE Transactions on Pattern 
 Analysis and Machine Intelligence journal (TPAMI). 2022.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;</span>284. Xiaobai Li, Shiyang Cheng, Yante Li, Muzammil Behzad, Stefanos Zafeiriou, Maja 
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;</span>28<span lang="en-us">7</span>. Xiaobai Li, Shiyang Cheng, Yante Li, Muzammil Behzad, Stefanos Zafeiriou, Maja 
 Pantic, <b>Guoying Zhao</b>. <u>4DME: A spontaneous 4D micro-expression dataset 
 with multimodalities</u>. IEEE Transactions on Affective Computing, 2022.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">83</span>. Xiaohua 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">86</span>. Xiaohua 
 Huang, Abhinav Dhall, Roland Goecke, Matti Pietik&auml;inen, <b>Guoying Zhao</b>. 
 <u>Analyzing group-level emotion with global alignment kernel based approach</u>. IEEE 
 Transactions on Affective Computing, <span lang="en-us">13(2): 713-728, </span>2022. </font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">82</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">85</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
 Ahola, Xiaohua Huang, <b>Guoying Zhao</b>. <u>Leaders and followers identified 
 by emotional mimicry during collaborative learning: A facial expression 
 recognition study on emotional valence</u>. IEEE Transactions on Affective 
 Computing, 2021. </font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font size="4" face="Times New Roman">&nbsp;281. Henglin Shi, Wei 
+<font size="4" face="Times New Roman">&nbsp;28<span lang="en-us">4</span>. Henglin Shi, Wei 
 Peng, Haoyu Chen, Xin Liu, <b>Guoying Zhao</b>. <u>Multi-scale 3D Shift 
 Graph Convolution Network for Emotion Recognition from 
 Human Actions</u>. IEEE Intelligent Systems. 
 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt">
-<font face="Times New Roman" size="4">&nbsp;280. Muzammil Behzad, Xiaobai Li, <b>Guoying Zhao</b>. 
+<font face="Times New Roman" size="4">&nbsp;28<span lang="en-us">3</span>. Muzammil Behzad, Xiaobai Li, <b>Guoying Zhao</b>. 
 <u>Disentangling 3D/4D Facial Affect Recognition with Faster 
 Multi-view Transformer</u>. IEEE Signal Processing Letters. 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt">
-<font face="Times New Roman" size="4">&nbsp;27<span lang="en-us">9</span>. Li Ji, Qinghui Zhu, Yongqin 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">82</span>. Li Ji, Qinghui Zhu, Yongqin 
 Zhang, Juanjuan Yin, Ruyi Wei, Jinsheng Xiao, Deqiang Xiao, <b>Guoying Zhao</b>.
 <u>Cross-Domain Heterogeneous Residual Network for Single Image Super-Resolution</u>. 
 Neural Networks, 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt">
-<font face="Times New Roman" size="4">&nbsp;27<span lang="en-us">8</span>. Dong Huang, Xiaoyi Feng, Haixi 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">81</span>. Dong Huang, Xiaoyi Feng, Haixi 
 Zhang, Zitong Yu, Jinye Peng, <b>Guoying Zhao</b>, Zhaoqiang Xia.&nbsp; <u>Spatio-Temporal Pain Estimation Network with Measuring Pseudo Heart Rate Gain</u>. 
 IEEE Trans. on Multimedia, 2021.</font></p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;277. </font>
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;280. </font>
 </span><font face="Times New Roman" size="4">Beijing Chen, Xin Liu, Yuhui Zheng,
 <b>Guoying Zhao</b>, and Yun-Qing Shi. <u>A robust GAN-generated face detection 
 method based on dual-color spaces and an improved Xception</u>. IEEE 
@@ -197,34 +197,35 @@ Transactions on Circuits and Systems for Video Technology (TCSVT), </font>
 <font face="Times New Roman" size="4">32(6): 3527-3538, 2022. </font>
 </p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;276. Jiajia Liu, Hong-Ning Dai, <b>
-Guoying Zhao</b>, Bo Li, Tianqi Zhang. <u>TMVOS: Triplet Matching for Efficient 
-Video Object Segmentation</u>. Signal Processing: Image Communication. 2022.</font></p>
+<font face="Times New Roman" size="4">&nbsp;27<span lang="en-us">9</span>. 
+Jiajia Liu, Hong-Ning Dai, <b>Guoying Zhao</b>, Bo Li, Tianqi Zhang. <u>TMVOS: 
+Triplet Matching for Efficient Video Object Segmentation</u>. Signal Processing: 
+Image Communication. 2022.</font></p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;275. </span>Wei 
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;278. </span>Wei 
 Peng, Li Feng, <b>Guoying Zhao</b>, Fang Liu. <u>Learning Optimal K-space 
 Acquisition and Reconstruction using Physics-Informed Neural Networks</u>. CVPR 
 2022. (Acceptance rate: 25.33%) </font>
 </p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;274. </span>
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;277. </span>
 Zitong Yu, Yuming Shen, Jingang Shi, Hengshuang Zhao, Philip Torr, <b>Guoying 
 Zhao</b>. <u>PhysFormer: Facial Video-based Physiological Measurement with 
 Temporal Difference Transformer</u>. CVPR 2022. (Acceptance rate: 25.33%) </font>
 </p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">73</span>. Haoyu Chen, Hao Tang, Zitong 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">76</span>. Haoyu Chen, Hao Tang, Zitong 
 Yu, Nicu Sebe, <b>Guoying Zhao</b>. <u>Geometry-Contrastive Transformer for 
 Generalized 3D Pose Transfer</u>. AAAI Conference on Artificial Intelligence (AAAI 
 2022). (Acceptance rate: 15%) </font>
 </p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">72</span>. Mozhgan PourKeshavarzi, <b>
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">75</span>. Mozhgan PourKeshavarzi, <b>
 Guoying Zhao</b>, Mohammad Sabokrou. <u>Looking Back on Learned Experiences for 
 Class/Task Incremental Learning</u>. The International Conference on Learning 
 Representations (ICLR), 2022.</font></p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">71</span>. Anja Keskinarkaus, Ruijing 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">74</span>. Anja Keskinarkaus, Ruijing 
 Yang, Angelos Fylakis, Md. Surat-E-Mostafa, Arto Hautala, Yong Hu, Jinye Peng,
 <b>Guoying Zhao</b>, Tapio Sepp&auml;nen, Jaro Karppinen. </font>
 <font face="Times New Roman" size="4"><u>Pain fingerprinting using multimodal 
@@ -232,26 +233,44 @@ sensing: pilot study.</u></font> <font face="Times New Roman" size="4">
 Multimedia </font><font face="Times New Roman" size="4">Tools and Applications, 
 81,&nbsp;5717¨C5742, 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;270. 
+<font face="Times New Roman" size="4">&nbsp;27<span lang="en-us">3</span>. 
 Beijing Chen, Wenjin Tan, Yiting Wang, <b>Guoying Zhao</b>.
 <a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cluster=7950198336869993283">
 Distinguishing Between Natural and GAN-Generated Face Images by Combining Global 
 and Local Features</a>. Chinese Journal of Electronics, 1-9, 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;269.</font></span><font face="Times New Roman" size="4"><span lang="en-us">
-</span>Yang Liu, Xingming Zhang, Kauttonen Janne, <b>Guoying Zhao</b>. Uncertain Label 
+<font face="Times New Roman" size="4">
+<span lang="en-us">&nbsp;</span>2<span lang="en-us">72</span>. Abdelrahman Mostafa, 
+Wei Peng, <b>Guoying Zhao</b>. <u>Hyperbolic <span lang="en-us">S</span>patial
+<span lang="en-us">T</span>emporal <span lang="en-us">G</span>raph
+<span lang="en-us">C</span>onvolutional <span lang="en-us">N</span>etworks</u>. 
+IEEE International Conference on Image Processing 2022 (ICIP 2022).</font></p>
+<p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;271. </span>Kevin 
+H. M. Cheng, Zitong Yu, Haoyu Chen, <b>Guoying Zhao</b>. <u>Benchmarking 3D Face 
+De-identification with Preserving Facial Attributes</u>. IEEE International 
+Conference on Image Processing 2022 (ICIP 2022).</font></p>
+<p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;270. </span>Yang Liu, Xingming Zhang, Kauttonen Janne, <b>Guoying Zhao</b>. Uncertain Label 
 Correction via Auxiliary Action Unit Graphs for Facial Expression Recognition. 
 26th International Conference on Pattern Recognition (ICPR), 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;268.</font></span><font face="Times New Roman" size="4"> 
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;269.</font></span><font face="Times New Roman" size="4"> 
 Atif Shah, Haoyu Chen, Henglin Shi, <b>Guoying Zhao</b>. Efficient Dense-Graph Convolutional Network with Inductive Prior Augmentations for Unsupervised 
 Micro-Gesture Recognition. 26th International Conference on Pattern Recognition 
 (ICPR), 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;267. Wei Peng, Li Feng, Guoying Zhao, and 
+<font face="Times New Roman" size="4">&nbsp;26<span lang="en-us">8</span>. Wei Peng, Li Feng, 
+<b>Guoying Zhao</b>, and 
 Fang Liu. Learning Optimal K-space Acquisition and Reconstruction using 
 Physics-Informed Neural Networks (Abstract). 2022 International Society for 
 Magnetic Resonance in Medicine (ISMRM).</font></p>
+<p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;267. </font>
+</span><font face="Times New Roman" size="4">Yoon Lee, Haoyu Chen, <b>Guoying 
+Zhao</b>, Marcus Specht. WEDAR: A novel webcam-based e-reading dataset for 
+attention analysis via regulator behavior detection. 24th ACM International 
+Conference on Multimodal Interaction, 2021.</font></p>
 <p class="MsoNormal" style="margin-top:0.5cm; margin-bottom:0.5cm">
 <span lang="en-us"><font size="5"><b>2021</b></font></span></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
