--- a/publications.htm
+++ b/publications.htm
@@ -150,35 +150,44 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <font size="5"><b>2022</b></font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">88</span>. 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">90</span>. 
 Wei Peng, Tuomas Varanka, Abdelrahman Mostafa, Henglin Shi, <b>Guoying Zhao</b>.
 <u>Hyperbolic Deep Neural Networks: A Survey</u>. IEEE Transactions on Pattern 
 Analysis and Machine Intelligence journal (TPAMI). 2022.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;</span>28<span lang="en-us">7</span>. Xiaobai Li, Shiyang Cheng, Yante Li, Muzammil Behzad, Stefanos Zafeiriou, Maja 
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;</span>28<span lang="en-us">9</span>. Xiaobai Li, Shiyang Cheng, Yante Li, Muzammil Behzad, Stefanos Zafeiriou, Maja 
 Pantic, <b>Guoying Zhao</b>. <u>4DME: A spontaneous 4D micro-expression dataset 
 with multimodalities</u>. IEEE Transactions on Affective Computing, 2022.</font></p>
+<p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;28</span></font><font face="Times New Roman" size="4">8. 
+Yante Li, Jinsheng Wei, Yang Liu, Janne Kauttonen and <b>Guoying Zhao</b>. <u>
+Deep Learning for Micro-expression Recognition: A Survey</u>. IEEE Transactions 
+on Affective Computing, 2022<span lang="en-us">.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">86</span>. Xiaohua 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">87</span>. Xiaohua 
 Huang, Abhinav Dhall, Roland Goecke, Matti Pietik&auml;inen, <b>Guoying Zhao</b>. 
 <u>Analyzing group-level emotion with global alignment kernel based approach</u>. IEEE 
 Transactions on Affective Computing, <span lang="en-us">13(2): 713-728, </span>2022. </font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">85</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">86</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
 Ahola, Xiaohua Huang, <b>Guoying Zhao</b>. <u>Leaders and followers identified 
 by emotional mimicry during collaborative learning: A facial expression 
 recognition study on emotional valence</u>. IEEE Transactions on Affective 
 Computing, 2021. </font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font size="4" face="Times New Roman">&nbsp;28<span lang="en-us">4</span>. Henglin Shi, Wei 
+<font size="4" face="Times New Roman">&nbsp;28<span lang="en-us">5</span>. Henglin Shi, Wei 
 Peng, Haoyu Chen, Xin Liu, <b>Guoying Zhao</b>. <u>Multi-scale 3D Shift 
 Graph Convolution Network for Emotion Recognition from 
 Human Actions</u>. IEEE Intelligent Systems. 
 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt">
-<font face="Times New Roman" size="4">&nbsp;28<span lang="en-us">3</span>. Muzammil Behzad, Xiaobai Li, <b>Guoying Zhao</b>. 
+<font face="Times New Roman" size="4">&nbsp;28<span lang="en-us">4</span>. Muzammil Behzad, Xiaobai Li, <b>Guoying Zhao</b>. 
 <u>Disentangling 3D/4D Facial Affect Recognition with Faster 
 Multi-view Transformer</u>. IEEE Signal Processing Letters. 2022.</font></p>
+<p class="MsoPlainText" style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt">
+<font face="Times New Roman" size="4">&nbsp;283. Haitao Zhang, Beijing Chen, 
+Jinwei Wang, <b>Guoying Zhao</b>. <u>A Local Perturbation Generation Method for 
+GAN-generated Face Anti-forensics</u>. TCSVT. 2022</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt">
 <font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">82</span>. Li Ji, Qinghui Zhu, Yongqin 
 Zhang, Juanjuan Yin, Ruyi Wei, Jinsheng Xiao, Deqiang Xiao, <b>Guoying Zhao</b>.
