--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -179,7 +179,7 @@ chair of ACM International Conference on Multimodal Interaction 2021 (ICMI).</sp
 (Kolkata, India).</span></u></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4"><span lang="en-us">--</span> <b><u>
-<span style="font-family: Times New Roman">Special Sessions/Panels Chairs for FG 
+<span style="font-family: Times New Roman">Panels Chair for FG 
 2023 (Hawaii, USA).</span></u></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4"><b><span style="font-family: Times New Roman">-- <u>General Chair 
