--- a/teammembers.htm
+++ b/teammembers.htm
@@ -198,8 +198,6 @@ p
 		<font face="Times New Roman" size="4"><b><u>Visiting researchers</u><span lang="en-us">:</span></b></font></td>
 	</tr>
 	<tr>
-		<td width="222" height="0" align="center" valign="top">
-		<img border="0" src="Yuhua.jpg" width="145" height="144"></td>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Xu.jpg" width="125" height="143"></td>
 		<td height="0" align="center" valign="top" width="209">
@@ -208,11 +206,10 @@ p
 		　<img border="0" src="Haotian.jpg"></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 	</tr>
 	<tr>
-		<td width="222" height="0" align="center" valign="top">
-		<font face="Times New Roman"><b>Dr. Yuhua FAN </b>(Liaocheng University)<span lang="en-us">:
-		</span>Oct. 2019 - Oct. 2022</font></td>
 		<td width="226" height="0" align="center" valign="top">
 		<font face="Times New Roman"><b>Assoc. Prof. Xu CHENG </b>(Nanjing 
 		University of Information Science and Technology): July 2021 - 
@@ -227,6 +224,8 @@ p
 		　<font face="Times New Roman"><b>Mr. Haotian LIU</b></font><p style="text-align: center">
 		<font face="Times New Roman">(Central South University): Jan. 2022-Dec. 
 		2022</font></td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
@@ -324,6 +323,10 @@ p
 <p class="title" style="line-height: 150%">
 <font face="Times New Roman" size="4"><b>Past visiting researchers:</b></font></p>
 <ul>
+	<li>
+	<p class="title" style="line-height: 150%">
+		<font face="Times New Roman">Dr. Yuhua FAN (Liaocheng University)<span lang="en-us">:
+		</span>Oct. 2019 - <span lang="en-us">Sep</span>. 2022</font></li>
 	<li>
 	<p class="title" style="line-height: 150%">Ms. Yanying LIANG (South China 
 	University of Technology): Nov<span lang="en-us">.</span> 2019 - Nov<span lang="en-us">.</span> 
