--- a/publications.htm
+++ b/publications.htm
@@ -155,7 +155,8 @@ Wei Peng, Tuomas Varanka, Abdelrahman Mostafa, Henglin Shi, <b>Guoying Zhao</b>.
 <u>Hyperbolic Deep Neural Networks: A Survey</u>. IEEE Transactions on Pattern 
 Analysis and Machine Intelligence journal (TPAMI). 2022.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;</span>290. Xiaobai Li, Shiyang Cheng, Yante Li, Muzammil Behzad, Stefanos Zafeiriou, Maja 
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;</span>290. Xiaobai Li, Shiyang Cheng, Yante Li, Muzammil Behzad, 
+Jie Shen, Stefanos Zafeiriou, Maja 
 Pantic, <b>Guoying Zhao</b>. <u>4DME: A spontaneous 4D micro-expression dataset 
 with multimodalities</u>. IEEE Transactions on Affective Computing, 2022.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
