--- a/teammembers.htm
+++ b/teammembers.htm
@@ -62,7 +62,7 @@ p
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Yante.jpg"></td>
 		<td height="0" align="center" valign="top" width="225">
-		&nbsp;</td>
+		<img border="0" src="Muzammil.jpg" width="139" height="142"></td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
@@ -75,7 +75,7 @@ p
 		<b>
 		<font face="Times New Roman"><span lang="zh-cn">Dr</span>. Yante LI</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
-		&nbsp;</td>
+		<b><font face="Times New Roman">Dr. Muzammil BEHZAD</font></b></td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
