--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -171,6 +171,10 @@ IAPR Fellow</font></b></u></p>
 <font size="4">-- <b><u><span style="font-family: Times New Roman">2021-present, 
 AAIA Fellow</span></u></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
+<font size="4">-- <b><u><font face="Times New Roman">2022.11-present, member of 
+IEEE Signal Processing Society (SPS), Machine Learning for Signal Processing (MLSP) 
+Technical Committee (MLSP TC).</font></u></b></font></p>
+<p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4">-- <b><u><span style="font-family: Times New Roman">Co-Program 
 chair of ACM International Conference on Multimodal Interaction 2021 (ICMI).</span></u></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
