--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -183,11 +183,26 @@ Fellow of Asia-Pacific Artificial Intelligence Association (AAIA), 2021-.</span>
 <font size="4">-- IAPR Fellow, 2020- (For contributions to video analysis and 
 affective computing).</font></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<font size="4"><span style="font-family: Times New Roman">--&nbsp; Selected to
+<a target="_blank" style="font-family: Times New Roman" href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/4?fbclid=IwAR1d4PyRLUjFosQfpmynpn2WHrufhuURBZCJZWQwPzo13ARvsb5rBRfFOQE">
+world's top 2% scientists</a> (most widely cited scientists in different 
+disciplines) by Stanford University for four consecutive years (2019-2022).</span></font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<span style="font-family: Times New Roman"><font size="4">--</font></span><font size="4"><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
+<span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">
+Research.com Computer Science in Finland Leader Award, 2022</span></span></font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4"><span style="font-family: Times New Roman">-- 2022 International 
 Society for Magnetic Resonance in Medicine (ISMRM, best conference for MRI) 
 Magna Cum Laude Merit Award (top 5%), for the work ¡°Wei Peng, Li Feng, Guoying 
 Zhao, and Fang Liu. Learning Optimal K-space Acquisition and Reconstruction 
 using Physics-Informed Neural Networks¡±.</span></font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<font size="4"><span style="font-family: Times New Roman">-- The second prize of 
+IEEE Finland Jt. Chapter SP/CAS Best Paper Award 2022 for ¡°Zitong Yu, Benjia 
+Zhou, Jun Wan, Pichao Wang, Haoyu Chen, Xin Liu, Stan Z. Li, Guoying Zhao. 
+Searching Multi-Rate and Multi-Modal Temporal Enhanced Networks for Gesture 
+Recognition. IEEE Transactions on Image Processing (TIP), 2021.¡±</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
