--- a/main_experience.htm
+++ b/main_experience.htm
@@ -50,6 +50,10 @@ Position:</font></b></p>
 	Science, Aalto University. </font></p>
 	</li>
 	<li>
+	<p style="text-align: left; margin-bottom:0cm; line-height:150%">
+	<font size="4">2022.09 ¨C, Visiting Professor, CNS Lab, Stanford University.</font></p>
+	</li>
+	<li>
 	<p style="text-align: left; margin-bottom:0.5cm; line-height:150%"><font size="4">2010.09 -,
 	</font>
 	<span lang="zh-cn"><font size="4">Adjunct Professor 
@@ -72,6 +76,14 @@ Finland.</font></p></li>
 	<li>
 	<p style="text-align: left; margin-bottom:0; line-height:150%"><font size="4">2011.09 - 2017.01, Academy research fellow in 
 Academy of Finland</font><span lang="zh-cn"><font size="4">.</font></span></p></li>
+	<li>
+	<p style="text-align: left; line-height: 150%; margin-bottom: 0">
+	<font size="4">2016.06 - 2016.08, Nokia Visiting Professor, Rotgers 
+	Unibersity, US</font></li>
+	<li>
+	<p style="text-align: left; line-height: 150%; margin-bottom: 0">
+	<font size="4">2013.07 - 2013.09, Visiting Research Fellow, Imperial College 
+	London, UK</font></li>
 	<li>
 	<p style="text-align: left; margin-bottom:0; line-height:150%">
 	<font size="4">2008.01 - 2011.05, Postdoctoral Researcher of 
@@ -103,6 +115,11 @@ Projects as PI or Co-PI (Raised in total ~10.3 million EUR for my team):</span><
 	Professor</b> Grant (highest academic position of Academy of Finland): <b>
 	<a target="_blank" href="https://emotion-ai.rahtiapp.fi/">Towards vision-based emotion AI</a> (EmotionAI)</b>.&nbsp; 2 370 539 &#8364;. </span></font><span lang="EN-US"><font size="4">Overall success rate: 
 	4%.</font></span></li>
+	<li>
+	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
+	<font size="4"><span style="color: black">2023.01-2028.12: Funding to 
+	strengthen university research profiles: <b>Profi-7 Hybrid Intelligence</b> 
+	(Vice director): 7.85M &#8364; (Academy of Finland &amp; University of Oulu).</span></font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
 	<font size="4"><span style="color: black">2022.01-2024.12: <b>Academy ICT 
