--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -149,6 +149,10 @@ A:link {
 	COLOR: #12c; CURSOR: pointer
 }
 a{font-family:arial,sans-serif}
+span.q4iawc
+	{}
+span.hgkelc
+	{}
 -->
 </style>
 </head>
@@ -170,10 +174,20 @@ IAPR Fellow</font></b></u></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4">-- <b><u><span style="font-family: Times New Roman">2021-present, 
 AAIA Fellow</span></u></b></font></p>
+<p style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt" class="MsoListParagraph">
+<font size="4"><span lang="en-us">--</span> <u><b><font face="Times New Roman">
+<span lang="en-us">2022-present, </span>AAIA Women Committee members</font></b></u></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4">-- <b><u><font face="Times New Roman">2022.11-present, member of 
 IEEE Signal Processing Society (SPS), Machine Learning for Signal Processing (MLSP) 
 Technical Committee (MLSP TC).</font></u></b></font></p>
+<p style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt" class="MsoListParagraph">
+<font size="4"><span lang="en-us">--</span> <b><font face="Times New Roman">
+Selected to </font>
+<a target="_blank" href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/4?fbclid=IwAR1d4PyRLUjFosQfpmynpn2WHrufhuURBZCJZWQwPzo13ARvsb5rBRfFOQE">
+<font face="Times New Roman">world's top 2% scientists</font></a><font face="Times New Roman"> 
+(most widely cited scientists in different disciplines) by Stanford University 
+for four consecutive years (2019-2022).</font></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4">-- <b><u><span style="font-family: Times New Roman">Co-Program 
 chair of ACM International Conference on Multimodal Interaction 2021 (ICMI).</span></u></b></font></p>
@@ -386,6 +400,9 @@ Aug. 20-24, 2006, Hongkong.</font></span></p>
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><span style="font-family: 'Times New Roman'; font-weight: 700" lang="en-us"><u><font size="4">Invited talks:</font></u></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; line-height:200%; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
+<font size="4">CNCC (China National Computer Congress) Micro-expression Forum, 
+Dec. 8, 2022.</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; line-height:200%; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
 <font size="4">AAIA East China Artificial Intelligence Summit, July 23, 2022.</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
 <font size="4">International Conference on Ubiquitous Positioning, Indoor 
@@ -507,16 +524,16 @@ ICB, CAIP, CISP, &nbsp;etc.</font></p>
 <p class="MsoNormal" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:0.5cm; margin-bottom:0.5cm; line-height:200%">
 <b><span style="font-family: Times New Roman; font-size: 14pt">Visits:</span></b></p>
 <p class="MsoNormal" style="text-align: justify; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; margin-right: -6.8pt; margin-top: 0in; margin-bottom: 6.0pt">
-<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
-<font size="4">--&nbsp; </font> </span>
-<span lang="EN-US">
+<font size="4">--&nbsp; CNS Lab, Stanford University, Sep. 2022 - Mar. 2023<span lang="en-us">.</span></font></p>
+<p class="MsoNormal" style="text-align: justify; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; margin-right: -6.8pt; margin-top: 0in; margin-bottom: 6.0pt">
+<span lang="en-us"><font size="4">--&nbsp; </font></span><span lang="EN-US">
 <font size="4">Prof. Jeffrey Cohn's group in University of Pittsburgh and Carnegie Mellon 
 University (CMU), USA, from Mid. June for two weeks</font></span></p>
 <p class="MsoNormal" style="text-align: justify; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; margin-right: -6.8pt; margin-top: 0in; margin-bottom: 6.0pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 <font size="4">--&nbsp; </font> </span>
 <span lang="EN-US">
-<font size="4">Prof. DIMITRIS N. METAXAS' group in Rutgers, The State University of New Jersey, 
+<font size="4">Prof. Dimitris Metaxas' group in Rutgers, The State University of New Jersey, 
 USA, from June to Aug., 2016</font></span></p>
 <p class="MsoNormal" style="text-align: justify; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; margin-right: -6.8pt; margin-top: 0in; margin-bottom: 6.0pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
