--- a/personal.htm
+++ b/personal.htm
@@ -43,7 +43,8 @@ Academy Professor</span><span lang="EN-US" style="font-family: Times New Roman; 
 with Academy Finland and </span>
 </font><font size="4">
 <span style="font-family: Times New Roman; font-weight: normal">with the Center for Machine Vision and Signal Analysis 
-(CMVS), University of Oulu, Finland. She has been a </span>
+(CMVS), University of Oulu, Finland<span lang="en-us">, and visiting professor 
+with Aalto University and Stanford University</span>. She has been a </span>
 <span style="font-family: Times New Roman; font-weight: 700">full professor</span><span style="font-family: Times New Roman; font-weight: normal"> 
 (tenured, from 2017) with CMVS, where she was a senior researcher (2005-2007), Academy postdoctoral 
 researcher (2008-2011), </span>
@@ -55,23 +56,26 @@ to the highly competitive Academy Research Fellow position, in 2020 selected to 
 and in 2022 elected to a </span>
 <span style="font-family: Times New Roman; font-weight: 700">member </span>
 <font face="Times New Roman"><b>of Finnish Academy of Sciences and Letter</b>s</font><span style="font-family: Times New Roman; ">.</span><span style="font-family: Times New Roman; font-weight: normal"> She has 
-authored or co-authored more than <span lang="en-us">28</span>0 papers in journals and conferences, and 
+authored or co-authored more than <span lang="en-us">300</span> papers in journals and conferences, and 
 has served </span> </font><font size="4">
-<span style="font-family: Times New Roman; font-weight: normal">as a reviewer for many journals and conferences. Her papers have 
-currently over 1<span lang="en-us">88</span>00 citations in Google Scholar 
-(h-index 65). She is special sessions/panels chair for FG 2023 and </span><b>
-<span style="font-family: Times New Roman">general chair</span></b><span style="font-family: Times New Roman"> 
-of &nbsp;2022 International Conference on Image Processing and Media Computing (ICIPMC 
-2022). She </span>
+<span style="font-family: Times New Roman; font-weight: normal">as a reviewer 
+for many journals and conferences. Her papers have currently over 21500 citations in Google Scholar 
+(h-index 68). She is panel chair for FG 2023, publicity chair for SCIA 2023, and
+<span lang="en-us">t</span>utorial <span lang="en-us">c</span>hair for ICPR 
+2024. S</span><span style="font-family: Times New Roman">he </span>
 <span style="font-family: Times New Roman; font-weight: normal">was </span>
-<span style="font-family: Times New Roman; font-weight: 700">co-program chair</span><span style="font-family: Times New Roman; font-weight: normal"> of ACM International Conference on Multimodal 
+<b>
+<span style="font-family: Times New Roman">general chair</span></b><span style="font-family: Times New Roman"> 
+of &nbsp;Arctic AI days 2022, 2022 International Conference on Image Processing 
+and Media Computing (ICIPMC 2022)</span><span style="font-family: Times New Roman; font-weight: normal"><span lang="en-us"> 
+and </span>ICBEA (2019, 2020)</span><span lang="en-us" style="font-family: Times New Roman">,
+</span><span style="font-family: Times New Roman; font-weight: 700">co-program chair</span><span style="font-family: Times New Roman; font-weight: normal"> of ACM International Conference on Multimodal 
 Interaction 2021 (ICMI), </span>
-<span style="font-family: Times New Roman; font-weight: 700">general chair</span><span style="font-family: Times New Roman; font-weight: normal"> for ICBEA (2019, 2020), </span>
 <span style="font-family: Times New Roman; font-weight: 700">co-chair for Late Breaking 
 Results</span><span style="font-family: Times New Roman; font-weight: normal"> of ICMI 
 2019, </span><span style="font-family: Times New Roman; font-weight: 700">
 co-publicity chair</span><span style="font-family: Times New Roman; font-weight: normal"> 
-for FG 2018, has served as area chairs for several conferences and is </span>
+for FG 2018, has served as area chairs for several conferences and is<span lang="en-us">/was</span> </span>
 <span style="font-family: Times New Roman; font-weight: 700">associate 
 editor</span><span style="font-family: Times New Roman; font-weight: normal"> for Pattern Recognition, 
 IEEE Trans. on Multimedia, IEEE Transactions on Circuits and Systems for 
@@ -83,8 +87,9 @@ journals. Dr. Zhao was a Co-Chair of 19 International Workshops / special
 sessions in top venues, such as ICCV, 
 CVPR, ECCV, ACCV and FG. Her students <span lang="en-us">and 
 researchers </span>are 
-frequent recipients of very prestigious and highly competitive f</font></span><span style="font-family: Times New Roman; font-weight: normal"><font size="4">ellowships, such 
-as <span lang="en-us">Academy of Finland Postdoc position, </span>the Nokia 
+frequent recipients of very prestigious and highly competitive 
+<span lang="en-us">positions and </span>fellowships, such 
+<span lang="en-us">as professors/associate professors/assistant professors,</span> <span lang="en-us">Academy of Finland Postdoc position, </span>the Nokia 
 Scholarsh</font></span><font size="4"><span style="font-family: Times New Roman; font-weight: normal">ip, 
 Endeavour Research Fellowship, Ta</span></font><span style="font-family: Times New Roman; font-weight: normal"><font size="4">uno T&ouml;nning Research funding<span lang="en-us">, 
 Kauta Foundation grant</span> 
